appId: com.jadmin.mobile
---
- runFlow: login.yaml
- tapOn:
    label: "Abrir menu"
- tapOn:
    label: "Sair"
- assertVisible:
    label: "Entrar"
